tests/spec/fail/http_get_non_string.aja
import (
    "http"
)

print(http.get(1))
